test/tests/stages/18_structures/invalid_parse/extra_credit/union_struct_tag.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  union
  struct
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
